add fragments navigation

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -9,6 +9,24 @@
         android:id="@+id/peoplesListFragment"
         android:name="com.raywenderlich.android.imet.ui.list.PeoplesListFragment"
         android:label="iMet"
-        tools:layout="@layout/peoples_list_fragment"></fragment>
+        tools:layout="@layout/peoples_list_fragment">
+        <action
+            android:id="@+id/action_peoplesListFragment_to_addPeopleFragment"
+            app:destination="@id/addPeopleFragment" />
+        <action
+            android:id="@+id/action_peoplesListFragment_to_peopleDetailsFragment"
+            app:destination="@id/peopleDetailsFragment" />
+    </fragment>
 
+    <fragment
+        android:id="@+id/addPeopleFragment"
+        android:name="com.raywenderlich.android.imet.ui.add.AddPeopleFragment"
+        android:label="Add People"
+        tools:layout="@layout/add_people_fragment" />
+
+    <fragment
+        android:id="@+id/peopleDetailsFragment"
+        android:name="com.raywenderlich.android.imet.ui.details.PeopleDetailsFragment"
+        android:label="People Details"
+        tools:layout="@layout/people_details_fragment" />
 </navigation>
